<resources>
    <string name="app_name">K-Pay</string>
    <string name="username_label">Username</string>
    <string name="login_label">Login</string>
    <string name="don_t_have_an_account_label">Don\'t have an account?</string>
    <string name="register_now_label">Register now.</string>
    <string name="password_label">Password</string>
    <string name="repeat_password_label">Repeat password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="cancel_label">Cancel</string>
    <string name="empty_error_label">This field can\'t be empty</string>
    <string name="balance_label">Balance</string>
    <string name="top_up_label">TOP-UP</string>
    <string name="scan_label">Scan</string>
    <string name="qr_label">QR</string>
    <string name="watch_label">Watch</string>
    <string name="pay_label">Pay</string>
</resources>
