<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_marginTop="52dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/k_logo"/>

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="75sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/pay_label"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:hint="@string/username_label"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:hint="@string/password_label"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_label"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/textColorPrimary"
            android:text="@string/don_t_have_an_account_label"/>

        <TextView
            android:id="@+id/register_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:textColor="@color/textColorClickable"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_now_label"/>
    </LinearLayout>
</LinearLayout>