<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="52dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/k_logo"/>

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="75sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/pay_label"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_username_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:hint="@string/username_label"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:counterMaxLength="25"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:hint="@string/password_label"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_repeat_password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:hint="@string/repeat_password_label"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:hintTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_repeat_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:text="@string/sign_up_label"/>
</LinearLayout>